--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-typescript-starter",
   "version": "1.0.0",
   "description": "A basic express server setup with typescript.",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "ts-node ./src/index.ts",
     "dev": "nodemon src/index.ts",
