--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "keywords": [
     "express",
     "typescript",
+    "nodejs",
     "starter"
   ],
   "author": "thoughtstile",
@@ -27,9 +28,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-winston": "^4.1.0",
-    "winston": "^3.3.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -44,7 +43,6 @@
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^4.2.3"
   }
 }
