--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-typescript-starter",
   "version": "1.0.0",
-  "description": "A basic express server setup with typescript.",
+  "description": "A basic Express server setup with typescript.",
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node ./src/index.ts",
@@ -9,13 +9,7 @@
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "test": "jest"
   },
-  "keywords": [
-    "express",
-    "typescript",
-    "nodejs",
-    "starter"
-  ],
-  "author": "",
+  "author": "thoughtstile",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
